# MemLord

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
memlord/: __init__.py  core.py  fire.py  snake.py  util.py
tests/: conftest.py  pytest.ini  test_auto_gc.py  test_core.py  test_core_cpu.py  test_core_cuda.py  test_dtype_casts.py  test_finalizer.py  test_multi_device.py  test_regression.py  test_resource_calls.py  test_snake.py
