[build-system]
requires = ["setuptools >= 64"]

[project]
name = "MemLord"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.8"
license-files = ["LICENSE"]
authors = [
    { name = "ModelCloud", email = "qubitium@modelcloud.ai" },
]
keywords = ["MemLord"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: C++",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Information Technology",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "torch",
]

[project.urls]
Homepage = "https://github.com/ModelCloud/MemLord"
